<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina X Etanol</string>
    <string name="txt_hint_edit_gasolina">R$ Gasolina</string>
    <string name="txt_hint_edit_etanol">R$ Etanol</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do curso desejado</string>
    <string name="txt_hint_telefone_de_contato">Telefone de contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_button_calcular">CALCULAR</string>
    <string name="txt_resultado">RESULTADO</string>
</resources>